# github_migration_test

./: .flake8  .gitignore  .mailmap  Dockerfile  Dockerfile1  README.md  commit.txt  env.yml  file_test.txt  index.html  manifest.json  nonstandardcode.py  pyproject.toml  requirements.txt  test_1.txt  test_2.txt  test_3txt  test_clean.txt  test_clean_1.txt  test_clean_2.txt  test_clean_3.txt
.github/workflows/: docker_pipeline.yml  pyaction.yml  release-workflow.yml  sonar.yml  update_docker_pipeline.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: housing.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/source/: housing.html  modules.html
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/046d03230ab14fe0b7c285d90a7a11a2/: meta.yaml
mlruns/1/046d03230ab14fe0b7c285d90a7a11a2/tags/: mlflow.source.name
mlruns/1/2cbda91e8de94a598785e8d18b0a741b/: meta.yaml
mlruns/1/2cbda91e8de94a598785e8d18b0a741b/tags/: mlflow.runName
mlruns/1/4ad7659620ea4494b5d110401b830afc/: meta.yaml
mlruns/1/9542aa701f354418bc21362195c9a31f/: meta.yaml
notebook/: Ass_3.1.3.ipynb  Assessment_3_1.ipynb
notebook/.ipynb_checkpoints/: Assessment_3_1-checkpoint.ipynb
src/housing/: ingest_data.py  run_script.py  score.py  train.py
src/housing.egg-info/: PKG-INFO  SOURCES.txt
test/: test_unitinstallation.py
test/functional_test/: functional_test.py
test/unit_test/: test_ingest_data.py  test_ingest_datat.py
(+1 files in other folders)
